- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.5.0
- 
    None
- 
        a15cef268dbfe64e90fe665bc453e46c18f08f59 (qttools/5.5. 32.7.2015, 5.5.1)
windeployqt works well with vc2015 debug binaries but incorrectly threats release binaries as debug.
I did the next workaround that worked for me at the moment.
MsvcDebugRuntimeResult checkMsvcDebugRuntime(...)
{
    foreach (const QString &lib, dependentLibraries) {
		if (lib.startsWith(QLatin1String("VCRUNTIME140.DLL"), Qt::CaseInsensitive) ||
			lib.startsWith(QLatin1String("MSVCP140.DLL"), Qt::CaseInsensitive))
			return MsvcReleaseRuntime;
So, the issue is probably in the checkMsvcDebugRuntime function (qttools\src\windeployqt\utils.cpp).
- resulted from
- 
                    QTBUG-46629 qt-<>-windows-x86-msvc2012-5.5.0-rc_2015-06-10_13-33-22-91.exe: windeployqt no longer works for release builds -         
- Closed
 
-