windeployqt: Adapt to MSVC 2015.

The name of the runtime libraries changed to VCRUNTIME140[D].DLL.

Task-number: QTBUG-47334
Change-Id: Ibe9234e91801730afb2c0015abe94458fe22ba0f
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>